--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aldiariq.apppendataanwargakurangmampu">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="Pendataan Warga Kurang Mampu"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
