--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.0.0
   flutter_launcher_icons: ^0.9.2
+  http: ^0.13.1
+  toast: ^0.1.5
 
 flutter_icons:
   android: "launcher_icon"
