--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   http: ^0.13.1
   toast: ^0.1.5
+  shared_preferences: ^2.0.7
 
 flutter_icons:
   android: "launcher_icon"
